@@ -1,2 +1,5 @@
 @defaultMessage Use java.nio.charset.StandardCharsets instead
 org.apache.commons.codec.Charsets
+
+@defaultMessage Use java.util.Base64 instead
+org.apache.commons.codec.binary.Base64
